Added 0 margin to all p elements

--- a/index.css
+++ b/index.css
@@ -21,6 +21,10 @@ button {
   font-family: inherit;
 }
 
+p {
+  margin: 0;
+}
+
 .colour-generator {
   width: 55rem;
   background-color: #1f2937;
