--- a/index.css
+++ b/index.css
@@ -69,7 +69,7 @@ header {
 
 .hex-colour {
   background-color: #1f2937;
-  padding: 20px fill;
+  padding: 20px;
   grid-row: 2 / -1;
   color: #d5d4d8;
   font-size: 1.2rem;
